--- a/w9/team_activity/style.css
+++ b/w9/team_activity/style.css
@@ -1,5 +1,8 @@
 html {
   font-size: 10px;
+}
+
+main {
   background: url(b9r5sEL.jpg) bottom center;
   background-size: cover;
 }
@@ -27,6 +30,7 @@ html {
   padding: 1rem .5rem;
   transition: all .07s ease;
   width: 10rem;
+  height: 100px;
   text-align: center;
   color: white;
   background: rgba(0, 0, 0, 0.4);
