--- a/w10/quakes_near_me/style.css
+++ b/w10/quakes_near_me/style.css
@@ -15,6 +15,7 @@ main>ul li {
 main>ul li> :first-child {
     font-weight: bold;
     font-size: 20px;
+    cursor: pointer;
 }
 
 main>ul li> :last-child {
@@ -29,9 +30,11 @@ main>ul li:last-child {
     margin: 1em;
     padding: 1em;
     font-size: 14px;
+    cursor: pointer;
 }
 
 main>ul li>span.title {
+    font-size: 16px;
     font-weight: bold;
     text-transform: capitalize;
     color: #FFF;
