--- a/final_project/static/css/styles.css
+++ b/final_project/static/css/styles.css
@@ -18,13 +18,13 @@
   width: 40px;
 }
 #menu-icon:hover span, #menu-icon:hover span::after, #menu-icon:hover span::before {
-  background-color: #faeff1;
+  background-color: white;
 }
 #menu-icon.open {
   z-index: 1;
 }
 #menu-icon span {
-  background: #B23850;
+  background: #E7E3D4;
   border-radius: 2px;
   display: block;
   height: 5px;
@@ -43,10 +43,10 @@
   transition: 0.25s ease-in-out;
 }
 #menu-icon span:hover, #menu-icon span:hover::after, #menu-icon span:hover::before {
-  background-color: #faeff1;
+  background-color: white;
 }
 #menu-icon span::after {
-  background: #B23850;
+  background: #E7E3D4;
   border-radius: 2px;
   display: block;
   height: 5px;
@@ -58,7 +58,7 @@
   content: "";
 }
 #menu-icon span::before {
-  background: #B23850;
+  background: #E7E3D4;
   border-radius: 2px;
   display: block;
   height: 5px;
@@ -74,7 +74,7 @@
   -moz-transform: translateX(215px) rotate(135deg);
   -o-transform: translateX(215px) rotate(135deg);
   transform: translateX(215px) rotate(135deg);
-  background-color: #B23850;
+  background-color: #E7E3D4;
   content: "";
   top: 10px;
 }
@@ -83,7 +83,7 @@
   -moz-transform: rotate(-270deg);
   -o-transform: rotate(-270deg);
   transform: rotate(-270deg);
-  background-color: #B23850;
+  background-color: #E7E3D4;
   position: absolute;
   top: 0px;
 }
@@ -93,7 +93,7 @@
   top: 0px;
 }
 #menu-icon.open:hover span, #menu-icon.open:hover span::after {
-  background-color: #faeff1;
+  background-color: white;
 }
 
 #sidebar {
@@ -124,7 +124,7 @@
   padding: 5px;
 }
 #sidebar > ul li:hover {
-  color: #B23850;
+  color: #E7E3D4;
   cursor: pointer;
 }
 
@@ -151,13 +151,18 @@ h6 {
 
 .card {
   background-color: #C4DBF6;
-  box-shadow: 0 4px 8px 0 rgba(178, 56, 80, 0.2);
-  transition: 0.3s;
   border: solid 1px rgba(133, 144, 170, 0.5);
+  box-shadow: 0 4px 8px 0 rgba(231, 227, 212, 0.2);
+  display: grid;
+  grid-template-columns: 150px auto;
+  transition: 0.3s;
+}
+.card img {
+  object-fit: cover;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(178, 56, 80, 0.2);
+  box-shadow: 0 8px 16px 0 rgba(231, 227, 212, 0.2);
 }
 
 .container {
