--- a/final_project/static/scss/styles.scss
+++ b/final_project/static/scss/styles.scss
@@ -21,18 +21,21 @@ $font-code: monospace;
 
 // colors
 $color-black: #272727;
-$color-white: #B23850;
+$color-red: #E85A4F;
+$color-pink: #E98074;
 $color-blue: #3B8BEB;
 $color-white: #E7E3D4;
 $color-green: #C4DBF6;
 $color-gray: #8590AA;
+$color-light-brown: #EAE7DC;
+$color-brown: #D8C3A5;
 
 // menu
 // mixin span pseudo elements
 // variables
 
 @mixin mxn-span($top) {
-    background: $color-white;
+    background: $color-pink;
     border-radius: 2px;
     display: block;
     height: 5px;
@@ -76,7 +79,7 @@ $color-gray: #8590AA;
     &:hover span,
     &:hover span::after,
     &:hover span::before {
-        background-color: lighten($color-white, 50);
+        background-color: $color-red;
     }
 
     &.open {
@@ -92,7 +95,7 @@ $color-gray: #8590AA;
         &:hover,
         &:hover::after,
         &:hover::before {
-            background-color: lighten($color-white, 50);
+            background-color: $color-red;
         }
 
         &::after {
@@ -108,7 +111,7 @@ $color-gray: #8590AA;
 
     &.open span {
         @include mxn-translate-rotate(215px, 135deg);
-        background-color: $color-white;
+        background-color: $color-red;
         content: "";
         top: 10px;
     }
@@ -116,7 +119,7 @@ $color-gray: #8590AA;
     &.open span::after {
         // should inherit span translateX function
         @include mxn-rotate(-270deg);
-        background-color: $color-white;
+        background-color: $color-red;
         position: absolute;
         top: 0px;
     }
@@ -130,7 +133,7 @@ $color-gray: #8590AA;
     // adds hover after class .open is applied to #menu-icon
     &.open:hover span,
     &.open:hover span::after {
-        background-color: lighten($color-white, 50);
+        background-color: lighten($color-red, 50);
     }
 }
 
@@ -154,13 +157,13 @@ $color-gray: #8590AA;
         margin-top: 80px;
 
         li {
-            color: $color-white;
+            color: $color-pink;
             font-size: 18px;
             list-style: none;
             padding: 5px;
 
             &:hover {
-                color: $color-white;
+                color: $color-red;
                 cursor: pointer;
             }
         }
@@ -174,8 +177,8 @@ $color-gray: #8590AA;
 }
 
 body {
-    background-color: $color-blue;
-    color: $color-white;
+    background-color: $color-light-brown;
+    color: $color-red;
     font-family: $font-regular;
 }
 
@@ -189,9 +192,9 @@ h6 {
 }
 
 .card {
-    background-color: $color-green;
-    border: solid 1px rgba($color: $color-gray, $alpha: 0.5);
-    box-shadow: 0 4px 8px 0 rgba($color: $color-white, $alpha: 0.2);
+    background-color: $color-red;
+    border: solid 1px rgba($color: $color-white, $alpha: 0.5);
+    box-shadow: 0 4px 8px 0 rgba($color: $color-gray, $alpha: 0.2);
     display: grid;
     grid-template-columns: 150px auto;
     transition: 0.3s;
@@ -206,7 +209,7 @@ h6 {
 }
 
 .container {
-    color: $color-black;
+    color: $color-light-brown;
     padding: 2px 16px;
 
     p {
@@ -231,7 +234,7 @@ h6 {
 }
 
 footer {
-    background-color: $color-blue;
+    background-color: $color-light-brown;
     padding: 1em;
     text-align: center;
 }
