--- a/final_project/static/css/styles.css
+++ b/final_project/static/css/styles.css
@@ -18,13 +18,13 @@
   width: 40px;
 }
 #menu-icon:hover span, #menu-icon:hover span::after, #menu-icon:hover span::before {
-  background-color: #E85A4F;
+  background-color: #e85a4f;
 }
 #menu-icon.open {
   z-index: 1;
 }
 #menu-icon span {
-  background: #E98074;
+  background: #e98074;
   border-radius: 2px;
   display: block;
   height: 5px;
@@ -43,10 +43,10 @@
   transition: 0.25s ease-in-out;
 }
 #menu-icon span:hover, #menu-icon span:hover::after, #menu-icon span:hover::before {
-  background-color: #E85A4F;
+  background-color: #e85a4f;
 }
 #menu-icon span::after {
-  background: #E98074;
+  background: #e98074;
   border-radius: 2px;
   display: block;
   height: 5px;
@@ -58,7 +58,7 @@
   content: "";
 }
 #menu-icon span::before {
-  background: #E98074;
+  background: #e98074;
   border-radius: 2px;
   display: block;
   height: 5px;
@@ -74,7 +74,7 @@
   -moz-transform: translateX(215px) rotate(135deg);
   -o-transform: translateX(215px) rotate(135deg);
   transform: translateX(215px) rotate(135deg);
-  background-color: #E85A4F;
+  background-color: #e85a4f;
   content: "";
   top: 10px;
 }
@@ -83,7 +83,7 @@
   -moz-transform: rotate(-270deg);
   -o-transform: rotate(-270deg);
   transform: rotate(-270deg);
-  background-color: #E85A4F;
+  background-color: #e85a4f;
   position: absolute;
   top: 0px;
 }
@@ -118,13 +118,13 @@
   margin-top: 80px;
 }
 #sidebar > ul li {
-  color: #E98074;
+  color: #e98074;
   font-size: 18px;
   list-style: none;
   padding: 5px;
 }
 #sidebar > ul li:hover {
-  color: #E85A4F;
+  color: #e85a4f;
   cursor: pointer;
 }
 
@@ -135,8 +135,8 @@
 }
 
 body {
-  background-color: #EAE7DC;
-  color: #E85A4F;
+  background-color: #eae7dc;
+  color: #e85a4f;
   font-family: Raleway, sans-serif;
 }
 
@@ -149,8 +149,35 @@ h6 {
   font-family: OpenSans, sans-serif;
 }
 
+main {
+  width: 100%;
+}
+
+.search {
+  display: grid;
+  grid-template-columns: 1fr 52px;
+  width: 100%;
+}
+.search input[type=text] {
+  padding: 15px;
+  font-size: 20px;
+  border: 1px solid gray;
+  background: #fff;
+}
+.search button {
+  float: left;
+  padding: 15px;
+  background: #fff url("../img/icons8-search-48.png") no-repeat;
+  color: white;
+  font-size: 17px;
+  border: 1px solid gray;
+  border-left: none;
+  /* Prevent double borders */
+  cursor: pointer;
+}
+
 .card {
-  background-color: #E85A4F;
+  background-color: #e85a4f;
   border: solid 1px rgba(231, 227, 212, 0.5);
   box-shadow: 0 4px 8px 0 rgba(133, 144, 170, 0.2);
   display: grid;
@@ -166,7 +193,7 @@ h6 {
 }
 
 .container {
-  color: #EAE7DC;
+  color: #eae7dc;
   padding: 2px 16px;
 }
 .container p {
@@ -186,7 +213,7 @@ h6 {
 }
 
 footer {
-  background-color: #EAE7DC;
+  background-color: #eae7dc;
   padding: 1em;
   text-align: center;
 }
