--- a/final_project/static/scss/styles.scss
+++ b/final_project/static/scss/styles.scss
@@ -1,185 +1,183 @@
 // fonts
 @font-face {
-    font-weight: 700;
-    font-style: normal;
-    font-family: OpenSans;
-    src: url(../fonts/OpenSans-Bold.ttf);
+  font-weight: 700;
+  font-style: normal;
+  font-family: OpenSans;
+  src: url(../fonts/OpenSans-Bold.ttf);
 }
 
 @font-face {
-    font-weight: 400;
-    font-style: normal;
-    font-family: Raleway;
-    src: url(../fonts/Raleway-Regular.ttf);
+  font-weight: 400;
+  font-style: normal;
+  font-family: Raleway;
+  src: url(../fonts/Raleway-Regular.ttf);
 }
 
-$font-header: OpenSans,
-sans-serif;
-$font-regular: Raleway,
-sans-serif;
+$font-header: OpenSans, sans-serif;
+$font-regular: Raleway, sans-serif;
 $font-code: monospace;
 
 // colors
 $color-black: #272727;
-$color-red: #E85A4F;
-$color-pink: #E98074;
-$color-blue: #3B8BEB;
-$color-white: #E7E3D4;
-$color-green: #C4DBF6;
-$color-gray: #8590AA;
-$color-light-brown: #EAE7DC;
-$color-brown: #D8C3A5;
+$color-red: #e85a4f;
+$color-pink: #e98074;
+$color-blue: #3b8beb;
+$color-white: #e7e3d4;
+$color-green: #c4dbf6;
+$color-gray: #8590aa;
+$color-light-brown: #eae7dc;
+$color-brown: #d8c3a5;
 
 // menu
 // mixin span pseudo elements
 // variables
 
 @mixin mxn-span($top) {
-    background: $color-pink;
-    border-radius: 2px;
-    display: block;
-    height: 5px;
-    left: 0;
-    opacity: 1;
-    position: absolute;
-    top: $top;
-    width: 30px;
+  background: $color-pink;
+  border-radius: 2px;
+  display: block;
+  height: 5px;
+  left: 0;
+  opacity: 1;
+  position: absolute;
+  top: $top;
+  width: 30px;
 }
 
 @mixin mxn-transition {
-    -webkit-transition: 0.25s ease-in-out;
-    -moz-transition: 0.25s ease-in-out;
-    -o-transition: 0.25s ease-in-out;
-    transition: 0.25s ease-in-out;
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
 }
 
 @mixin mxn-rotate($deg) {
-    -webkit-transform: rotate($deg);
-    -moz-transform: rotate($deg);
-    -o-transform: rotate($deg);
-    transform: rotate($deg);
+  -webkit-transform: rotate($deg);
+  -moz-transform: rotate($deg);
+  -o-transform: rotate($deg);
+  transform: rotate($deg);
 }
 
 @mixin mxn-translate-rotate($x, $deg) {
-    -webkit-transform: translateX($x) rotate($deg);
-    -moz-transform: translateX($x) rotate($deg);
-    -o-transform: translateX($x) rotate($deg);
-    transform: translateX($x) rotate($deg);
+  -webkit-transform: translateX($x) rotate($deg);
+  -moz-transform: translateX($x) rotate($deg);
+  -o-transform: translateX($x) rotate($deg);
+  transform: translateX($x) rotate($deg);
 }
 
 #menu-icon {
-    cursor: pointer;
-    height: 30px;
-    position: relative;
-    text-align: left;
-    width: 40px;
+  cursor: pointer;
+  height: 30px;
+  position: relative;
+  text-align: left;
+  width: 40px;
+
+  // adds hover to span, span::after, and span::before
+  // when container is hovered
+  &:hover span,
+  &:hover span::after,
+  &:hover span::before {
+    background-color: $color-red;
+  }
+
+  &.open {
+    z-index: 1;
+  }
+
+  span {
+    @include mxn-span(0px);
+    @include mxn-rotate(0deg);
+    @include mxn-transition;
 
     // adds hover to span, span::after, and span::before
-    // when container is hovered
-    &:hover span,
-    &:hover span::after,
-    &:hover span::before {
-        background-color: $color-red;
+    &:hover,
+    &:hover::after,
+    &:hover::before {
+      background-color: $color-red;
     }
 
-    &.open {
-        z-index: 1;
+    &::after {
+      @include mxn-span(10px);
+      content: "";
     }
 
-    span {
-        @include mxn-span(0px);
-        @include mxn-rotate(0deg);
-        @include mxn-transition;
-
-        // adds hover to span, span::after, and span::before
-        &:hover,
-        &:hover::after,
-        &:hover::before {
-            background-color: $color-red;
-        }
-
-        &::after {
-            @include mxn-span(10px);
-            content: "";
-        }
-
-        &::before {
-            @include mxn-span(20px);
-            content: "";
-        }
+    &::before {
+      @include mxn-span(20px);
+      content: "";
     }
+  }
 
-    &.open span {
-        @include mxn-translate-rotate(215px, 135deg);
-        background-color: $color-red;
-        content: "";
-        top: 10px;
-    }
+  &.open span {
+    @include mxn-translate-rotate(215px, 135deg);
+    background-color: $color-red;
+    content: "";
+    top: 10px;
+  }
 
-    &.open span::after {
-        // should inherit span translateX function
-        @include mxn-rotate(-270deg);
-        background-color: $color-red;
-        position: absolute;
-        top: 0px;
-    }
+  &.open span::after {
+    // should inherit span translateX function
+    @include mxn-rotate(-270deg);
+    background-color: $color-red;
+    position: absolute;
+    top: 0px;
+  }
 
-    &.open span::before {
-        content: "";
-        opacity: 0;
-        top: 0px;
-    }
+  &.open span::before {
+    content: "";
+    opacity: 0;
+    top: 0px;
+  }
 
-    // adds hover after class .open is applied to #menu-icon
-    &.open:hover span,
-    &.open:hover span::after {
-        background-color: lighten($color-red, 50);
-    }
+  // adds hover after class .open is applied to #menu-icon
+  &.open:hover span,
+  &.open:hover span::after {
+    background-color: lighten($color-red, 50);
+  }
 }
 
 #sidebar {
-    @include mxn-transition();
-    background-color: rgba($color: $color-black, $alpha: 0.9);
-    height: 100%;
-    left: -260px;
-    opacity: 1;
-    position: absolute;
-    width: 260px;
-    top: 0;
+  @include mxn-transition();
+  background-color: rgba($color: $color-black, $alpha: 0.9);
+  height: 100%;
+  left: -260px;
+  opacity: 1;
+  position: absolute;
+  width: 260px;
+  top: 0;
+  z-index: 0;
+
+  &.slide {
+    transform: translateX(260px);
     z-index: 0;
+  }
 
-    &.slide {
-        transform: translateX(260px);
-        z-index: 0;
+  > ul {
+    margin-top: 80px;
+
+    li {
+      color: $color-pink;
+      font-size: 18px;
+      list-style: none;
+      padding: 5px;
+
+      &:hover {
+        color: $color-red;
+        cursor: pointer;
+      }
     }
-
-    >ul {
-        margin-top: 80px;
-
-        li {
-            color: $color-pink;
-            font-size: 18px;
-            list-style: none;
-            padding: 5px;
-
-            &:hover {
-                color: $color-red;
-                cursor: pointer;
-            }
-        }
-    }
+  }
 }
 
 *,
 *::after,
 *::before {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: $color-light-brown;
-    color: $color-red;
-    font-family: $font-regular;
+  background-color: $color-light-brown;
+  color: $color-red;
+  font-family: $font-regular;
 }
 
 h1,
@@ -188,53 +186,86 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: $font-header;
+  font-family: $font-header;
+}
+
+main {
+  width: 100%;
+}
+
+// search
+.search {
+  display: grid;
+  grid-template-columns: 1fr 52px;
+  width: 100%;
+
+  input[type="text"] {
+    padding: 15px;
+    font-size: 20px;
+    border: 1px solid gray;
+    background: #fff;
+  }
+
+  button {
+    float: left;
+    padding: 15px;
+    background: #fff url("../img/icons8-search-48.png") no-repeat;
+    color: white;
+    font-size: 17px;
+    border: 1px solid gray;
+    border-left: none; /* Prevent double borders */
+    cursor: pointer;
+  }
+
+  //button:hover {
+  //  background: #0b7dda;
+  //}
 }
 
 .card {
-    background-color: $color-red;
-    border: solid 1px rgba($color: $color-white, $alpha: 0.5);
-    box-shadow: 0 4px 8px 0 rgba($color: $color-gray, $alpha: 0.2);
-    display: grid;
-    grid-template-columns: 150px auto;
-    transition: 0.3s;
+  background-color: $color-red;
+  border: solid 1px rgba($color: $color-white, $alpha: 0.5);
+  box-shadow: 0 4px 8px 0 rgba($color: $color-gray, $alpha: 0.2);
+  display: grid;
+  grid-template-columns: 150px auto;
+  transition: 0.3s;
 
-    img {
-        object-fit: cover;
-    }
+  img {
+    object-fit: cover;
+  }
 }
 
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba($color: $color-white, $alpha: 0.2);
+  box-shadow: 0 8px 16px 0 rgba($color: $color-white, $alpha: 0.2);
 }
 
 .container {
-    color: $color-light-brown;
-    padding: 2px 16px;
+  color: $color-light-brown;
+  padding: 2px 16px;
 
-    p {
-        text-transform: lowercase;
-    }
+  p {
+    text-transform: lowercase;
+  }
 }
 
 .product-list {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 
-    li {
-        h2 {
-            text-align: center;
-        }
+  li {
+    h2 {
+      text-align: center;
     }
+  }
 
-    li:not(last-child) {
-        margin-bottom: 9px;
-    }
+  li:not(last-child) {
+    margin-bottom: 9px;
+  }
 }
 
 footer {
-    background-color: $color-light-brown;
-    padding: 1em;
-    text-align: center;
+  background-color: $color-light-brown;
+  padding: 1em;
+  text-align: center;
 }
