Added product detailed view

--- a/final_project/static/css/styles.css
+++ b/final_project/static/css/styles.css
@@ -197,7 +197,7 @@ main {
   padding: 2px 16px;
 }
 .container p {
-  text-transform: lowercase;
+  text-transform: capitalize;
 }
 
 .product-list {
