--- a/final_project/static/css/styles.css
+++ b/final_project/static/css/styles.css
@@ -10,6 +10,27 @@
   font-family: Raleway;
   src: url(../fonts/Raleway-Regular.ttf);
 }
+nav {
+  display: grid;
+  grid-template-columns: auto 90px;
+}
+nav .cart {
+  margin-top: 0;
+  padding-top: 0;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  cursor: pointer;
+}
+nav .cart > .cart-count {
+  border-radius: 50%;
+  border: 2px solid #3b8beb;
+  font-weight: bold;
+  padding: 8px;
+  text-align: center;
+  width: 40px;
+}
+
 #menu-icon {
   cursor: pointer;
   height: 30px;
