--- a/final_project/static/css/styles.css
+++ b/final_project/static/css/styles.css
@@ -10,9 +10,21 @@
   font-family: Raleway;
   src: url(../fonts/Raleway-Regular.ttf);
 }
+body,
+header {
+  margin: 0;
+  padding: 0;
+}
+
 nav {
   display: grid;
   grid-template-columns: auto 90px;
+  position: fixed;
+  z-index: 999;
+  height: 70px;
+  width: 100%;
+  background-color: #d8c3a5;
+  padding: 10px;
 }
 nav .cart {
   margin-top: 0;
@@ -117,36 +129,81 @@ nav .cart > .cart-count {
   background-color: white;
 }
 
-#sidebar {
-  -webkit-transition: 0.25s ease-in-out;
-  -moz-transition: 0.25s ease-in-out;
-  -o-transition: 0.25s ease-in-out;
-  transition: 0.25s ease-in-out;
-  background-color: rgba(39, 39, 39, 0.9);
-  height: 100%;
+/*#sidebar {
+  @include mxn-transition();
+  background-color: rgba($color: $color-black, $alpha: 0.9);
+  height: 100vh;
   left: -260px;
   opacity: 1;
   position: absolute;
   width: 260px;
   top: 0;
   z-index: 0;
+
+  &.slide {
+    transform: translateX(260px);
+    z-index: 0;
+  }
+
+  >ul {
+    margin-top: 80px;
+
+    li {
+      color: $color-pink;
+      font-size: 18px;
+      list-style: none;
+      padding: 5px;
+
+      &:hover {
+        color: $color-red;
+        cursor: pointer;
+      }
+    }
+  }
+}*/
+.quickview {
+  position: fixed;
+  height: 100vh;
+  width: 400px;
+  background: #8590aa;
+  top: 70px;
+  left: -100%;
+  transition: all 0.3s ease;
+  padding: 30px;
+  color: #fff;
 }
-#sidebar.slide {
-  transform: translateX(260px);
-  z-index: 0;
-}
-#sidebar > ul {
-  margin-top: 80px;
-}
-#sidebar > ul li {
-  color: #e98074;
-  font-size: 18px;
-  list-style: none;
-  padding: 5px;
-}
-#sidebar > ul li:hover {
-  color: #e85a4f;
+.quickview .close {
+  height: 20px;
+  width: 20px;
+  float: left;
   cursor: pointer;
+}
+.quickview .close:before, .quickview .close:after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 2px;
+  background-color: #ffF;
+  transform: rotate(45deg);
+}
+.quickview .close:after {
+  transform: rotate(-45deg);
+}
+.quickview .headline {
+  margin-bottom: 30px;
+  font-size: 18px;
+}
+.quickview .description {
+  font-size: 12px;
+  margin-bottom: 20px;
+}
+.quickview img {
+  display: inline-block;
+  border-radius: 4px;
+  margin: 5px;
+}
+.quickview.active {
+  left: 0;
 }
 
 *,
@@ -172,6 +229,10 @@ h6 {
 
 main {
   width: 100%;
+  padding-top: 70px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
 }
 
 .search {
