--- a/final_project/static/scss/styles.scss
+++ b/final_project/static/scss/styles.scss
@@ -67,9 +67,22 @@ $color-brown: #d8c3a5;
   transform: translateX($x) rotate($deg);
 }
 
+
+body,
+header {
+  margin: 0;
+  padding: 0;
+}
+
 nav {
   display: grid;
   grid-template-columns: auto 90px;
+  position: fixed;
+  z-index: 999;
+  height: 70px;
+  width: 100%;
+  background-color: $color-brown;
+  padding: 10px;
 
   .cart {
     margin-top: 0;
@@ -160,10 +173,10 @@ nav {
   }
 }
 
-#sidebar {
+/*#sidebar {
   @include mxn-transition();
   background-color: rgba($color: $color-black, $alpha: 0.9);
-  height: 100%;
+  height: 100vh;
   left: -260px;
   opacity: 1;
   position: absolute;
@@ -191,6 +204,58 @@ nav {
       }
     }
   }
+}*/
+.quickview {
+  position: fixed;
+  height: 100vh;
+  width: 400px;
+  background: $color-gray;
+  top: 70px;
+  left: -100%;
+  transition: all .3s ease;
+  padding: 30px;
+  color: #fff;
+
+  .close {
+    height: 20px;
+    width: 20px;
+    float: left;
+    cursor: pointer;
+
+    &:before,
+    &:after {
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 2px;
+      background-color: #ffF;
+      transform: rotate(45deg);
+    }
+
+    &:after {
+      transform: rotate(-45deg);
+    }
+  }
+
+  .headline {
+    margin-bottom: 30px;
+    font-size: 18px;
+  }
+
+  .description {
+    font-size: 12px;
+    margin-bottom: 20px;
+  }
+
+  img {
+    display: inline-block;
+    border-radius: 4px;
+    margin: 5px;
+  }
+
+  &.active {
+    left: 0;
+  }
 }
 
 *,
@@ -216,6 +281,10 @@ h6 {
 
 main {
   width: 100%;
+  padding-top: 70px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
 }
 
 // search
