--- a/final_project/static/scss/styles.scss
+++ b/final_project/static/scss/styles.scss
@@ -81,7 +81,7 @@ nav {
   z-index: 999;
   height: 70px;
   width: 100%;
-  background-color: $color-brown;
+  background-color: $color-black;
   padding: 10px;
 
   .cart {
@@ -209,17 +209,17 @@ nav {
   position: fixed;
   height: 100vh;
   width: 400px;
-  background: $color-gray;
+  background: rgba($color: $color-black, $alpha: 0.8);
   top: 70px;
   left: -100%;
-  transition: all .3s ease;
+  transition: all .5s ease;
   padding: 30px;
   color: #fff;
 
   .close {
     height: 20px;
     width: 20px;
-    float: left;
+    float: right;
     cursor: pointer;
 
     &:before,
