--- a/final_project/static/css/styles.css
+++ b/final_project/static/css/styles.css
@@ -25,6 +25,16 @@ nav {
   width: 100%;
   background-color: #272727;
   padding: 10px;
+  color: #e7e3d4;
+}
+nav .main-menu-list {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+}
+nav .main-menu-list li {
+  display: inline;
+  cursor: pointer;
 }
 nav .cart {
   margin-top: 0;
@@ -165,12 +175,12 @@ nav .cart > .cart-count {
   position: fixed;
   height: 100vh;
   width: 400px;
-  background: rgba(39, 39, 39, 0.8);
+  background: rgba(234, 231, 220, 0.9);
   top: 70px;
   left: -100%;
   transition: all 0.5s ease;
   padding: 30px;
-  color: #fff;
+  color: #272727;
 }
 .quickview .close {
   height: 20px;
@@ -183,7 +193,7 @@ nav .cart > .cart-count {
   position: absolute;
   width: 20px;
   height: 2px;
-  background-color: #ffF;
+  background-color: #272727;
   transform: rotate(45deg);
 }
 .quickview .close:after {
@@ -283,7 +293,7 @@ main {
 }
 
 .card {
-  background-color: #e85a4f;
+  background-color: #272727;
   border: solid 1px rgba(231, 227, 212, 0.5);
   box-shadow: 0 4px 8px 0 rgba(133, 144, 170, 0.2);
   display: grid;
@@ -337,6 +347,7 @@ footer {
   background-color: #eae7dc;
   padding: 1em;
   text-align: center;
+  color: #272727;
 }
 
 /*# sourceMappingURL=styles.css.map */
