--- a/final_project/static/scss/styles.scss
+++ b/final_project/static/scss/styles.scss
@@ -83,6 +83,18 @@ nav {
   width: 100%;
   background-color: $color-black;
   padding: 10px;
+  color: $color-white;
+
+  .main-menu-list {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+
+    li {
+      display: inline;
+      cursor: pointer;
+    }
+  }
 
   .cart {
     margin-top: 0;
@@ -209,12 +221,12 @@ nav {
   position: fixed;
   height: 100vh;
   width: 400px;
-  background: rgba($color: $color-black, $alpha: 0.8);
+  background: rgba($color: $color-light-brown, $alpha: 0.9);
   top: 70px;
   left: -100%;
   transition: all .5s ease;
   padding: 30px;
-  color: #fff;
+  color: $color-black;
 
   .close {
     height: 20px;
@@ -228,7 +240,7 @@ nav {
       position: absolute;
       width: 20px;
       height: 2px;
-      background-color: #ffF;
+      background-color: $color-black;
       transform: rotate(45deg);
     }
 
@@ -338,7 +350,7 @@ main {
 }
 
 .card {
-  background-color: $color-red;
+  background-color: $color-black;
   border: solid 1px rgba($color: $color-white, $alpha: 0.5);
   box-shadow: 0 4px 8px 0 rgba($color: $color-gray, $alpha: 0.2);
   display: grid;
@@ -400,4 +412,5 @@ footer {
   background-color: $color-light-brown;
   padding: 1em;
   text-align: center;
+  color: $color-black;
 }
