--- a/final_project/static/css/styles.css
+++ b/final_project/static/css/styles.css
@@ -295,6 +295,7 @@ main {
 .card {
   background-color: #272727;
   border: solid 1px rgba(231, 227, 212, 0.5);
+  border-radius: 4px;
   box-shadow: 0 4px 8px 0 rgba(133, 144, 170, 0.2);
   display: grid;
   grid-template-columns: 150px auto;
