--- a/final_project/static/scss/styles.scss
+++ b/final_project/static/scss/styles.scss
@@ -352,6 +352,7 @@ main {
 .card {
   background-color: $color-black;
   border: solid 1px rgba($color: $color-white, $alpha: 0.5);
+  border-radius: 4px;
   box-shadow: 0 4px 8px 0 rgba($color: $color-gray, $alpha: 0.2);
   display: grid;
   grid-template-columns: 150px auto;
