--- a/final_project/static/scss/styles.scss
+++ b/final_project/static/scss/styles.scss
@@ -84,6 +84,7 @@ nav {
   background-color: $color-black;
   padding: 10px;
   color: $color-white;
+  border-bottom: 2px solid $color-light-brown;
 
   .main-menu-list {
     list-style: none;
