--- a/final_project/static/css/styles.css
+++ b/final_project/static/css/styles.css
@@ -299,7 +299,7 @@ main {
   border-radius: 4px;
   box-shadow: 0 4px 8px 0 rgba(133, 144, 170, 0.2);
   display: grid;
-  grid-template-columns: 150px auto;
+  grid-template-columns: 1fr;
   padding: 10px;
   transition: 0.3s;
 }
@@ -333,7 +333,7 @@ main {
 
 .product-view-controls {
   display: grid;
-  grid-template-columns: auto 120px;
+  grid-template-columns: auto 60px 50px 120px;
   grid-column-gap: 1em;
   cursor: pointer;
 }
@@ -342,6 +342,12 @@ main {
   text-align: right;
 }
 .product-view-controls :nth-child(2) {
+  padding-top: 8px;
+}
+.product-view-controls :nth-child(3) {
+  padding: 8px;
+}
+.product-view-controls :nth-child(4) {
   float: right;
 }
 
