--- a/final_project/static/scss/styles.scss
+++ b/final_project/static/scss/styles.scss
@@ -356,7 +356,7 @@ main {
   border-radius: 4px;
   box-shadow: 0 4px 8px 0 rgba($color: $color-gray, $alpha: 0.2);
   display: grid;
-  grid-template-columns: 150px auto;
+  grid-template-columns: 1fr;
   padding: 10px;
   transition: 0.3s;
 
@@ -396,7 +396,7 @@ main {
 
 .product-view-controls {
   display: grid;
-  grid-template-columns: auto 120px;
+  grid-template-columns: auto 60px 50px 120px;
   grid-column-gap: 1em;
   cursor: pointer;
 
@@ -406,6 +406,14 @@ main {
   }
 
   :nth-child(2) {
+    padding-top: 8px;
+  }
+
+  :nth-child(3) {
+    padding: 8px;
+  }
+
+  :nth-child(4) {
     float: right;
   }
 }
