--- a/final_project/static/css/styles.css
+++ b/final_project/static/css/styles.css
@@ -278,7 +278,7 @@ main {
   color: #fff;
   display: inline-block;
   cursor: pointer;
-  padding: 10px;
+  padding: 5px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #154682;
 }
@@ -333,9 +333,10 @@ main {
 
 .product-view-controls {
   display: grid;
-  grid-template-columns: auto 60px 50px 120px;
-  grid-column-gap: 1em;
+  grid-template-columns: auto 60px 50px 100px;
+  grid-column-gap: 0.5em;
   cursor: pointer;
+  font-size: 14px;
 }
 .product-view-controls :first-child {
   padding-top: 8px;
@@ -363,6 +364,7 @@ main {
 }
 .cart-table td input[type=number] {
   padding: 4px;
+  width: 50px;
 }
 .cart-table td:first-child {
   text-transform: uppercase;
