--- a/final_project/static/scss/styles.scss
+++ b/final_project/static/scss/styles.scss
@@ -402,16 +402,16 @@ main {
   font-size: 14px;
 
   :first-child {
-    padding-top: 8px;
+    padding-top: 6px;
     text-align: right;
   }
 
   :nth-child(2) {
-    padding-top: 8px;
+    padding-top: 6px;
   }
 
   :nth-child(3) {
-    padding: 8px;
+    padding: 4px;
   }
 
   :nth-child(4) {
@@ -424,11 +424,13 @@ main {
   color: $color-black;
 
   th {
-    padding: 4px;
+    padding: 8px;
   }
 
   td {
-    padding: 4px;
+    padding: 6px;
+    border-top: 1px solid $color-black;
+    border-bottom: 1px solid $color-black;
 
     input[type=number] {
       padding: 4px;
