--- a/final_project/static/scss/styles.scss
+++ b/final_project/static/scss/styles.scss
@@ -221,7 +221,7 @@ nav {
 .quickview {
   position: fixed;
   height: 100vh;
-  width: 400px;
+  width: 350px;
   background: rgba($color: $color-light-brown, $alpha: 0.9);
   top: 70px;
   left: -100%;
@@ -275,6 +275,10 @@ nav {
 *::after,
 *::before {
   box-sizing: border-box;
+}
+
+.active-link {
+  color: $color-blue;
 }
 
 body {
