--- a/final_project/static/css/styles.css
+++ b/final_project/static/css/styles.css
@@ -369,10 +369,14 @@ main {
 }
 .cart-table td input[type=number] {
   padding: 4px;
+  text-align: center;
   width: 50px;
 }
 .cart-table td:first-child {
   text-transform: uppercase;
+}
+.cart-table td:nth-child(2) {
+  text-align: center;
 }
 
 .red {
