Added checkout message

--- a/final_project/static/scss/styles.scss
+++ b/final_project/static/scss/styles.scss
@@ -407,11 +407,15 @@ main {
 }
 
 .product-view-controls {
+  background-color: $color-light-brown;
   display: grid;
   grid-template-columns: auto 60px 50px 100px;
   grid-column-gap: 0.5em;
   cursor: pointer;
+  color: $color-black;
   font-size: 14px;
+  margin-top: 1em;
+  padding: 0.5em;
 
   :first-child {
     padding-top: 6px;
