--- a/final_project/static/css/styles.css
+++ b/final_project/static/css/styles.css
@@ -347,11 +347,15 @@ main {
 }
 
 .product-view-controls {
+  background-color: #eae7dc;
   display: grid;
   grid-template-columns: auto 60px 50px 100px;
   grid-column-gap: 0.5em;
   cursor: pointer;
+  color: #272727;
   font-size: 14px;
+  margin-top: 1em;
+  padding: 0.5em;
 }
 .product-view-controls :first-child {
   padding-top: 6px;
