--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -53,6 +53,10 @@ p {
   margin: 0.1em;
 }
 
+.go-back {
+  color: $color-white;
+}
+
 @mixin code-snippet {
   figure {
     background-color: $color-ligth-blue;
